# itenary-planner

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  agent.py  agent_tools.py  core.py  llm.py  nixpacks.toml  parsers.py  pyproject.toml  railway.toml  reference_data_loader.py  render.yaml  requirements.txt  rules.py  settings.py
booking_api/: README.md  __init__.py  endpoints.py  headers.py  http_client.py
docs/: README.md  architecture.md
mcp_tools/: README.md  __init__.py  get_flight_details.py  get_package_details.py  get_restaurant_details.py  get_tour_details.py  get_transfer_details.py  get_visa_info.py  list_packages.py  search_flights.py  search_hotels.py  search_restaurants.py  search_tours.py  search_transfers.py  server.py
prompts/: README.md  system_prompt_v1.md  whatsapp_addendum.md
reference_data/: README.md  cities.json
reference_data/hotels/: dubai.json
scripts/: README.md  audit_apis.py  diagnose_apis.py  grade_benchmarks.py  refresh_test_fixtures.py  sample_all_apis.py  validate_against_samples.py
surfaces/: README.md  __init__.py  mcp_server.py  streamlit_app.py  whatsapp_app.py
tests/: README.md  conftest.py  factories.py  test_core.py  test_integration.py  test_parsers.py  test_rules.py
tests/fixtures/: flight_response.json  hotel_response.json  restaurant_response.json  tour_list_response.json  tour_rate_response.json  transfer_response.json  visa_response.json
