[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "itinerary_planner"
version = "2.0.0"
description = "Dubai trip planner — Streamlit + WhatsApp surfaces, LangGraph ReAct agent, ActivityLinker booking API."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "python-dotenv>=1.0",
    "structlog>=24.1",
    "requests>=2.32",
    "langchain>=0.3",
    "langchain-core>=0.3",
    "langchain-anthropic>=0.2",
    "langchain-openai>=0.2",
    "langgraph>=0.2",
    "langgraph-checkpoint-sqlite>=2.0",
    "anthropic>=0.34",
    "mcp>=1.0",
    "fastmcp>=0.4",
    "streamlit>=1.38",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "twilio>=9.3",
    "pandas>=2.2",
    "openpyxl>=3.1",
    "filelock>=3.15",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "responses>=0.25",
    "ruff>=0.6",
    "mypy>=1.11",
    "pre-commit>=3.8",
    "detect-secrets>=1.5",
    "types-requests>=2.32",
]

[tool.setuptools]
py-modules = ["core", "settings", "parsers", "rules", "reference_data_loader", "llm", "agent", "agent_tools"]
packages = ["booking_api", "mcp_tools", "surfaces", "scripts"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "C4", "UP", "SIM", "RUF", "N"]
ignore = ["E501", "B008", "N818"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "PLR2004", "E402"]
"scripts/**/*.py" = ["T20", "B005"]
"surfaces/mcp_server.py" = ["E402"]
"surfaces/streamlit_app.py" = ["RUF001", "SIM105"]
"core.py" = ["UP042"]
"agent_tools.py" = ["RUF001"]
"parsers.py" = ["B005"]
"rules.py" = ["RUF001"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["data/", "venv/", ".venv/"]

[[tool.mypy.overrides]]
module = ["streamlit.*", "twilio.*", "fastmcp.*", "mcp.*", "langchain.*", "langgraph.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-ra", "--strict-markers", "-v"]
filterwarnings = [
    "ignore::DeprecationWarning:pydantic.*",
    "ignore::DeprecationWarning:langchain.*",
]
